force-app/main/default/objects/Factoring_Rate__c/Factoring_Rate__c.object-meta.xml
<CustomObject>
    <label>Factoring Rate</label>
    <nameField>
        <displayFormat>FRN-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Factoring Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factoring Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>