force-app/main/default/objects/Factoring_Rate__c/fields/Factoring_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Rate__c</fullName>
    <label>Factoring Rate (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>