force-app/main/default/objects/Factoring_Rate__c/fields/Factoring_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Relationship__c</fullName>
    <label>Factoring Relationship</label>
    <referenceTo>Factoring_Relationship__c</referenceTo>
    <relationshipLabel>Factoring Rates</relationshipLabel>
    <relationshipName>Factoring_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>